Create potree preview viewer that does not have logo or menu

--- a/misc/potree/page_template/viewer_template.html
+++ b/misc/potree/page_template/viewer_template.html
@@ -60,7 +60,7 @@
 		<!-- INCLUDE POINTCLOUD -->
 		
 	</script>
-	<div style="position: absolute; z-index: 10000; right: 10px; bottom: 10px;">
+	<div class="nsf_logo" style="position: absolute; z-index: 10000; right: 10px; bottom: 10px;">
 		<img src="nsf_logo.png" />
 	</div>	
   </body>
